# unordered-containers

./: .gitignore  .hgignore  .readthedocs.yml  .stylish-haskell.yaml  .travis.yml  CHANGES.md  CONTRIBUTING.md  README.md  Tutorial.hs  cabal.haskell-ci  cabal.local.project  cabal.project  cabal.project.local.dump-code  hashmap-strict-properties.prof.html  helper.hs  newer-stack.yaml  other.yaml  stack.yaml  unordered-containers.cabal
.github/workflows/: 32bit-ci.yml  haskell-ci.yml  mhs-ci.yml
Data/: FullList.hs  HashMap.hs  HashSet.hs  Sized.hs  UnorderedIntMap.hs
Data/FullList/: Lazy.hs  Strict.hs
Data/HashMap/: Array.hs  Base.hs  Bits.hs  Common.hs  Internal.hs  Lazy.hs  List.hs  Mutable.hs  PopCount.hs  Strict.hs  UArray.hs  Unsafe.hs  UnsafeShift.hs
Data/HashMap/Internal/: .Array.hs.swp  Array.hs  Debug.hs  List.hs  Statistics.hs  Strict.hs  Unsafe.hs
Data/HashMap/Lazy/: Internal.hs
Data/HashMap/Strict/: Base.hs  Internal.hs
Data/HashSet/: Base.hs  Internal.hs
Tutorial/: HashMap.hs  HashSet.hs
benchmarks/: Benchmarks.hs  FineGrained.hs  Makefile  PopCount.hs  Util.hs  unordered-containers-benchmarks.cabal
benchmarks/Key/: Bytes.hs  SlowInt.hs
benchmarks/Util/: ByteString.hs  Int.hs  String.hs
cbits/: popc.c  popc.h
docs/: Makefile  conf.py  developer-guide.md  hash-map.rst  hash-set.rst  index.rst  intro.rst  make.bat  migration-salt.md  review-checklist.md
docs/_static/: sitemap.xml
tests/: HashMapProperties.hs  HashSetProperties.hs  List.hs  Main.hs  Makefile  MapProperties.hs  MemoryFootprint.hs  Properties.hs  Regressions.hs  SetProperties.hs  Strictness.hs  UnorderedIntMapProperties.hs  Utils.hs  Validity.hs  common.mk
tests/Properties/: HashMapLazy.hs  HashMapStrict.hs  HashSet.hs  List.hs  Size.hs
tests/Util/: Key.hs
utils/: Stats.hs
