name:           unordered-containers
version:        0.1.4.6
synopsis:       Efficient hashing-based container types
description:
  Efficient hashing-based container types.  The containers have been
  optimized for performance critical use, both in terms of large data
  quantities and high speed.
  .
  The declared cost of each operation is either worst-case or
  amortized, but remains valid even if structures are shared.
license:        BSD3
license-file:   LICENSE
author:         Johan Tibell <johan.tibell@gmail.com>
maintainer:     johan.tibell@gmail.com
bug-reports:    https://github.com/tibbe/unordered-containers/issues
copyright:      (c) Daan Leijen 2002
                (c) Andriy Palamarchuk 2008
                (c) 2010-2011 Johan Tibell
category:       Data
build-type:     Simple
cabal-version:  >=1.8
-- The test files shouldn't have to go here, but the source files for
-- the test-suite stanzas don't get picked up by `cabal sdist`.
Extra-source-files:
  tests/MapProperties.hs
  tests/SetProperties.hs
  benchmarks/Benchmarks.hs
  benchmarks/Makefile
  benchmarks/Util/*.hs

library
  exposed-modules:
    Data.HashMap.Lazy
    Data.HashMap.Strict
    Data.HashSet

  build-depends:
    base >= 4 && < 4.6,
    deepseq >= 1.1 && < 1.4,
    hashable >= 1.0.1.1 && < 1.2

  other-modules:
    Data.FullList.Lazy
    Data.FullList.Strict
    Data.HashMap.Common
    Data.HashMap.Lazy.Internal
    Data.HashMap.Strict.Internal

  ghc-options: -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs
  if impl(ghc > 6.10)
    ghc-options: -fregs-graph

test-suite map-properties
  hs-source-dirs: tests
  main-is: MapProperties.hs
  type: exitcode-stdio-1.0

  build-depends:
    base >= 4,
    hashable >= 1.0.1.1,
    QuickCheck >= 2.4.0.1,
    test-framework >= 0.3.3,
    test-framework-quickcheck2 >= 0.2.9,
    unordered-containers

  ghc-options: -Wall


test-suite set-properties
  hs-source-dirs: tests
  main-is: SetProperties.hs
  type: exitcode-stdio-1.0

  build-depends:
    base >= 4,
    containers,
    hashable >= 1.0.1.1,
    QuickCheck >= 2.4.0.1,
    test-framework >= 0.3.3,
    test-framework-quickcheck2 >= 0.2.9,
    unordered-containers

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/tibbe/unordered-containers.git
