name:       unordered-containers-benchmarks
version:    0
build-type: Simple

cabal-version: >=1.2

executable unordered-containers-benchmarks
  ghc-options: -Wall -O2 -rtsopts
  hs-source-dirs: .
  main-is: Benchmarks.hs
  other-modules:
    Util.ByteString
    Util.Int
    Util.String
  build-depends:
    base,
    bytestring,
    containers,
    criterion,
    deepseq,
    deepseq-generics,
    hashmap,
    ghc-prim,
    hashable,
    mtl,
    random,
    unordered-containers
