name:       unordered-containers-benchmarks
version:    0
build-type: Simple

cabal-version: >=1.2

executable unordered-containers-benchmarks
  ghc-options: -Wall -O2
  hs-source-dirs: .. .
  main-is: Benchmarks.hs
  other-modules:
    Data.HashMap.Array
    Data.HashMap.Base
    Data.HashMap.Lazy
    Data.HashMap.Strict
    Data.HashMap.Unsafe
    Data.HashMap.UnsafeShift
    Data.HashSet
    Util.ByteString
    Util.Int
    Util.String
  build-depends:
    base,
    bytestring,
    containers,
    criterion,
    deepseq,
    deepseq-generics,
    hashmap,
    ghc-prim,
    hashable,
    mtl,
    random
